<resources>
    <string name="app_name">NYT Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="action_settings">Advanced Filters</string>
    <string name="hints">Enter search query</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="refreshing">Refreshing</string>
    <string name="select_date">Select Date</string>
    <string name="art">Art</string>
    <string name="fashion">Fashion</string>
    <string name="sports">Sports</string>
    <string name="education">Education</string>
    <string name="health">Health</string>


    <string-array name="sort_entries">
        <item>Newest First</item>
        <item>Oldest First</item>
    </string-array>

</resources>
