<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nytimes.nytsearch.SearchActivity"
    tools:showIn="@layout/activity_search">

    <Spinner
        android:id="@+id/spSorter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/sort_entries"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/tvDPLauncher"
        android:text="@string/select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/spSorter"
        android:onClick="onClickDatePicker"
        android:layout_above="@+id/etQuery"
        android:textSize="17sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spSorter"
        android:layout_toLeftOf="@+id/btnSearch"
        android:hint="@string/hints"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/swipeContainer" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="onArticleSearch"
        android:layout_below="@+id/spSorter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnSearch"
        tools:context="com.nytimes.nytsearch.SearchActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true" />

    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>
